--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </a-plane>
 
           <!-- this is our floor -->
-          <!--a-box width="75" height="0.2" depth="75" static-body visible="false"></a-box-->
+          <a-box width="75" height="0.2" depth="75" static-body visible="false"></a-box>
         </a-anchor>
        <!-- Oh and this is the marker -->
         <!--a-marker-camera preset='hiro'></a-marker-camera-->
