--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         <!-- Board container - all positions will be relative to the ones of the container so we can move the board around later -->
         
         <a-anchor hit-testing-enabled='true'>
-          <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box><!--a-plane static-body board color="black" id="boardContainer" rotation="90 0 0" width="8" height="8" position="0 0 0"-->
+          <a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
+            <a-torus-knot radius='0.26' radius-tubular='0.05'>
+              <a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
+            </a-torus-knot>
+          </a-box>
+            <!--a-plane static-body board color="black" id="boardContainer" rotation="90 0 0" width="8" height="8" position="0 0 0"-->
             <!-- tiles & pieces will be created and placed at the initialization of the board component -->
-          </a-plane>
-
-
+            <!--/a-plane-->
         </a-anchor>
        <!-- Oh and this is the marker -->
         <!--a-marker-camera preset='hiro'></a-marker-camera-->
