--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             material="">
         </a-mixin>
 
-        <a-mixin id="piece" scale="0.01 0.01 0.01" rotation="-90 0 0"></a-mixin>
+        <a-mixin id="piece" scale="0.015 0.015 0.015"></a-mixin>
 
         <a-asset-item id="pawnObj" src="assets/pawn.obj"></a-asset-item>
         <a-asset-item id="knightObj" src="assets/knight.obj"></a-asset-item>
