Got pieces position and rotation right, lights, and marker position

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <script src="js/components.js"></script>
 <script src="js/chessboard.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded arjs='sourceType: webcam;'>
+<a-scene embedded arjs='trackingMethod: best;sourceType: webcam;debugUIEnabled: false'  light="defaultLightsEnabled: false">
     <a-assets>
         <a-mixin id="tile" 
             geometry="primitive: box; height: 0.2;" 
             material="">
         </a-mixin>
 
-        <a-mixin id="piece" scale="0.015 0.015 0.015"></a-mixin>
+        <a-mixin id="piece" scale="0.012 0.012 0.012" position="0 0.03 0"></a-mixin>
 
         <a-asset-item id="pawnObj" src="assets/pawn.obj"></a-asset-item>
         <a-asset-item id="knightObj" src="assets/knight.obj"></a-asset-item>
@@ -36,8 +36,16 @@
         <a-mixin id="whitequeen" obj-model="obj: #queenObj; mtl: #whiteMtl"></a-mixin>
     </a-assets>
 
+    <a-entity light="type: point; color: white; intensity: 1" position="-4 7 -5"></a-entity> 
+    <a-entity light="type: ambient; color: white; intensity: 0.4"></a-entity> 
 
-    <a-box static-body board id="boardContainer" width="0.1" depth="0.1" height="0.01" position="0 0 0"></a-box>
-    <a-marker-camera preset='hiro'></a-marker-camera>
+    <a-anchor hit-testing-enabled='true'>
+        <a-box static-body board id="boardContainer" width="0.1" depth="0.1" height="0.01" position="0 0 0"></a-box>
+    </a-anchor>
+
+    <!-- Define a static camera -->
+    <a-camera-static/>
+
+    <!--a-marker-camera preset='hiro'></a-marker-camera-->
 </a-scene>
 </body>
